--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
 
 
 
-<section id="word-container" class="bg-gray-100 p-10  w-11/12 mx-auto my-10"></section>
+<section id="word-container" class="bg-gray-100 p-10  w-11/12 mx-auto my-10 grid md:grid-cols-3 grid-cols-1 gap-5">
+  
+</section>
 
 <script src="./script/index.js"></script>
 </body>
