--- a/index.html
+++ b/index.html
@@ -83,9 +83,45 @@
 
 
 <section id="word-container" class="bg-gray-100 p-10  w-11/12 mx-auto my-10 grid md:grid-cols-3 grid-cols-1 gap-5">
-  
+  <div class="col-span-full text-center space-y-3 font-bangls">
+   
+    <p class="text-[12px] ">আপনি এখনো কোন Lesson Select করুন নি। </p>
+    <h2 class="text-3xl font-semibold">একটি Lesson Select করুন।</h2>
+  </div>
 </section>
 
+<section id="spinner" class="flex justify-center items-center h-[100vh]  text-white hidden">
+ <!--  <div class="flex w-52 flex-col gap-4 space-y-3">
+ <div class="skeleton h-4 w-20 mx-auto"></div>
+  <div class="skeleton h-4 w-24 mx-auto"></div>
+  <div class="skeleton h-4 w-40 mx-auto"></div>
+  <div class="flex justify-between ">
+ <div class="skeleton h-4 w-10"></div>
+ <div class="skeleton h-4 w-10"></div>
+  </div>
+</div> -->
+
+  <span class="loading loading-spinner loading-xl text-info "></span>
+
+</section>
+
+
+
+<!-- Open the modal using ID.showModal() method -->
+<!-- <button class="btn" onclick="my_modal_5.showModal()">open modal</button> -->
+<dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+  <div class="modal-box">
+   <div id="detailsContainer">
+   
+   </div>
+    <div class="modal-action">
+      <form method="dialog">
+        <!-- if there is a button in form, it will close the modal -->
+        <button class="btn">Close</button>
+      </form>
+    </div>
+  </div>
+</dialog>
 <script src="./script/index.js"></script>
 </body>
 </html>
