--- a/index.html
+++ b/index.html
@@ -79,7 +79,20 @@
 
     </div>
 </section>
-
+<section class="w-11/12 mx-auto">
+  <div class="flex items-center">
+  <div>
+    <label class="input validator join-item">
+      <i class="fa-solid fa-magnifying-glass"></i>
+      <input id="input-search" type="email" placeholder="search.." required />
+    </label>
+   
+  </div>
+  <div class="w-40">
+    <button id="btn-search" class=" btn btn-primary join-item md:px-12 rounded-2">search</button>
+  </div>
+</div>
+</section>
 
 
 <section id="word-container" class="bg-gray-100 p-10  w-11/12 mx-auto my-10 grid md:grid-cols-3 grid-cols-1 gap-5">
