--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
    
   </div>
   <div class="w-40">
-    <button id="btn-search" class=" btn btn-primary join-item md:px-12 rounded-2">search</button>
+    <button required id="btn-search" class=" btn btn-primary join-item md:px-12 rounded-2">search</button>
   </div>
 </div>
 </section>
@@ -117,6 +117,110 @@
   <span class="loading loading-spinner loading-xl text-info "></span>
 
 </section>
+
+
+
+
+<section class="w-11/12 mx-auto">
+<h2 class="text-4xl font-bold mb-9 text-center "><span class="text-[#3FCDFF]">Frequently</span> <span> Asked Questions</span></h2>
+<div class="space-y-3">
+  <div class=" bg-base-100 border-base-300 collapse border">
+  <input type="checkbox" class="peer" />
+  <div
+    class="collapse-title bg-primary text-primary-content peer-checked:bg-secondary peer-checked:text-secondary-content pb-5"
+  >
+    How do I create an account?
+  </div>
+  <div
+    class="collapse-content bg-primary text-primary-content peer-checked:bg-secondary peer-checked:text-secondary-content"
+  >
+    Click the "Sign Up" button in the top right corner and follow the registration process.
+  </div>
+</div>
+<div class=" bg-base-100 border-base-300 collapse border">
+  <input type="checkbox" class="peer" />
+  <div
+    class="collapse-title bg-primary text-primary-content peer-checked:bg-secondary peer-checked:text-secondary-content pb-5"
+  >
+    How do I create an account?
+  </div>
+  <div
+    class="collapse-content bg-primary text-primary-content peer-checked:bg-secondary peer-checked:text-secondary-content"
+  >
+    Click the "Sign Up" button in the top right corner and follow the registration process.
+  </div>
+</div>
+<div class=" bg-base-100 border-base-300 collapse border">
+  <input type="checkbox" class="peer" />
+  <div
+    class="collapse-title bg-primary text-primary-content peer-checked:bg-secondary peer-checked:text-secondary-content pb-5"
+  >
+    How do I create an account?
+  </div>
+  <div
+    class="collapse-content bg-primary text-primary-content peer-checked:bg-secondary peer-checked:text-secondary-content"
+  >
+    Click the "Sign Up" button in the top right corner and follow the registration process.
+  </div>
+</div>
+<div class=" bg-base-100 border-base-300 collapse border">
+  <input type="checkbox" class="peer" />
+  <div
+    class="collapse-title bg-primary text-primary-content peer-checked:bg-secondary peer-checked:text-secondary-content pb-5"
+  >
+    How do I create an account?
+  </div>
+  <div
+    class="collapse-content bg-primary text-primary-content peer-checked:bg-secondary peer-checked:text-secondary-content"
+  >
+    Click the "Sign Up" button in the top right corner and follow the registration process.
+  </div>
+</div>
+<div class=" bg-base-100 border-base-300 collapse border">
+  <input type="checkbox" class="peer" />
+  <div
+    class="collapse-title bg-primary text-primary-content peer-checked:bg-secondary peer-checked:text-secondary-content pb-5"
+  >
+    How do I create an account?
+  </div>
+  <div
+    class="collapse-content bg-primary text-primary-content peer-checked:bg-secondary peer-checked:text-secondary-content"
+  >
+    Click the "Sign Up" button in the top right corner and follow the registration process.
+  </div>
+</div>
+</div>
+</section>
+
+
+
+
+ <footer class="bg-[#EDF6FF] p-10 w-full mx-auto mt-6">
+  <div class="flex flex-col sm:flex-row justify-between items-start gap-8">
+    
+    <!-- Branding -->
+    <div>
+      <div class="flex items-center gap-2 text-xl font-bold">
+        <span class="text-lg font-bold">English</span>
+        <img src="./img/logo.png" alt="Janala Logo" class="w-8 h-8">
+        <span class="font-bangla font-semibold text-lg">জানালা</span>
+      </div>
+      <p class="text-sm mt-2">ইংরেজি শিখুন সহজে</p>
+      <p class="text-sm">Providing ED-Tech Applications since 2025</p>
+    </div>
+
+    <!-- Legal Section -->
+    <nav>
+      <h6 class="footer-title">Legal</h6>
+      <ul class="space-y-1">
+        <li><a href="#" class="link link-hover">Terms of use</a></li>
+        <li><a href="#" class="link link-hover">Privacy policy</a></li>
+        <li><a href="#" class="link link-hover">Cookie policy</a></li>
+      </ul>
+    </nav>
+
+  </div>
+</footer>
 
 
 
